<resources>
    <string name="app_name">Calendar</string>
    <string name="label_event_start">開始日</string>
    <string name="label_event_start_hint">開始日</string>
    <string name="label_event_end">終了日</string>
    <string name="label_event_end_hint">終了日</string>
    <string name="label_event_all_day">終日</string>
    <string name="label_event_title">件名</string>
    <string name="label_event_title_hint">件名</string>
    <string name="label_event_memo">メモ</string>
    <string name="label_event_memo_hint">メモ</string>
    <string name="event_mark">●</string>
    <string name="menu_delete">削除</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="sunday">日</string>
</resources>